--- a/app/src/main/res/layout/fragment_post_edit.xml
+++ b/app/src/main/res/layout/fragment_post_edit.xml
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="32dp"
-            android:text="Location"
+            android:text="About"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="32dp"
-            android:text="Description"
+            android:text="Info"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp"
             android:textStyle="bold"
