--- a/app/src/main/res/layout/post_list_row.xml
+++ b/app/src/main/res/layout/post_list_row.xml
@@ -54,7 +54,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize8Percent"
-            app:srcCompat="@drawable/nature" />
+            app:srcCompat="@drawable/pot" />
 
         <TextView
             android:id="@+id/listrow_username_tv"
